# PROTON

./: .gitignore  DEPLOY_VPS.md  PUMP_FUN_LAUNCH.md  README.md  docker-compose.yml  install.sh
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: index.js
backend/src/db/: index.js  migrate.js
backend/src/routes/: auth.js  claim.js  leaderboard.js  miner.js  owner.js  referral.js  tasks.js
frontend/: package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
miner/: Cargo.toml
miner/src/: auth.rs  benchmark.rs  config.rs  main.rs  miner.rs  tasks.rs
