[package]
name = "proton-miner"
version = "0.1.0"
edition = "2021"
authors = ["PROTON Team"]
description = "PROTON - AI Compute Miner for Solana"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
num_cpus = "1.16"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5"
chrono = "0.4"
flate2 = "1.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
